// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<CompatSessionDetail> > renders a compatability session details 1`] = `
<div>
  <div
    class="_blockList_f8cc7f"
  >
    <h3
      class="_font-heading-md-semibold_1jx6b_121"
    >
      abcd1234
    </h3>
    <div
      class="_block_17898c"
    >
      <h6
        class="_font-body-md-semibold_1jx6b_64"
      >
        Session
      </h6>
      <ul
        class="_list_040867"
      >
        <li
          class="_detailRow_040867"
        >
          <p
            class="_font-body-sm-semibold_1jx6b_45 _detailLabel_040867"
          >
            ID
          </p>
          <p
            class="_font-body-sm-regular_1jx6b_40 _detailValue_040867"
          >
            <code>
              session-id
            </code>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_font-body-sm-semibold_1jx6b_45 _detailLabel_040867"
          >
            Device ID
          </p>
          <p
            class="_font-body-sm-regular_1jx6b_40 _detailValue_040867"
          >
            <code>
              abcd1234
            </code>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_font-body-sm-semibold_1jx6b_45 _detailLabel_040867"
          >
            Signed in
          </p>
          <p
            class="_font-body-sm-regular_1jx6b_40 _detailValue_040867"
          >
            <time
              datetime="2023-06-29T15:35:17+12:00"
            >
              Thu, 29 Jun 2023, 15:35
            </time>
          </p>
        </li>
      </ul>
    </div>
    <div
      class="_block_17898c"
    >
      <h6
        class="_font-body-md-semibold_1jx6b_64"
      >
        Client
      </h6>
      <ul
        class="_list_040867"
      >
        <li
          class="_detailRow_040867"
        >
          <p
            class="_font-body-sm-semibold_1jx6b_45 _detailLabel_040867"
          >
            Name
          </p>
          <p
            class="_font-body-sm-regular_1jx6b_40 _detailValue_040867"
          >
            element.io
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_font-body-sm-semibold_1jx6b_45 _detailLabel_040867"
          >
            Uri
          </p>
          <p
            class="_font-body-sm-regular_1jx6b_40 _detailValue_040867"
          >
            <a
              class="_link_eqn56_17 _externalLink_a97355"
              data-kind="primary"
              href="https://element.io"
              rel="noreferrer noopener"
              target="_blank"
            >
              https://element.io
            </a>
          </p>
        </li>
      </ul>
    </div>
    <button
      class="_button_1raud_17"
      data-kind="destructive"
      data-size="sm"
      role="button"
      tabindex="0"
    >
      End session
    </button>
  </div>
</div>
`;

exports[`<CompatSessionDetail> > renders a compatability session without an ssoLogin redirectUri 1`] = `
<div>
  <div
    class="_blockList_f8cc7f"
  >
    <h3
      class="_font-heading-md-semibold_1jx6b_121"
    >
      abcd1234
    </h3>
    <div
      class="_block_17898c"
    >
      <h6
        class="_font-body-md-semibold_1jx6b_64"
      >
        Session
      </h6>
      <ul
        class="_list_040867"
      >
        <li
          class="_detailRow_040867"
        >
          <p
            class="_font-body-sm-semibold_1jx6b_45 _detailLabel_040867"
          >
            ID
          </p>
          <p
            class="_font-body-sm-regular_1jx6b_40 _detailValue_040867"
          >
            <code>
              session-id
            </code>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_font-body-sm-semibold_1jx6b_45 _detailLabel_040867"
          >
            Device ID
          </p>
          <p
            class="_font-body-sm-regular_1jx6b_40 _detailValue_040867"
          >
            <code>
              abcd1234
            </code>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_font-body-sm-semibold_1jx6b_45 _detailLabel_040867"
          >
            Signed in
          </p>
          <p
            class="_font-body-sm-regular_1jx6b_40 _detailValue_040867"
          >
            <time
              datetime="2023-06-29T15:35:17+12:00"
            >
              Thu, 29 Jun 2023, 15:35
            </time>
          </p>
        </li>
      </ul>
    </div>
    <button
      class="_button_1raud_17"
      data-kind="destructive"
      data-size="sm"
      role="button"
      tabindex="0"
    >
      End session
    </button>
  </div>
</div>
`;
